# Cyclon

./: .gitignore  CMakeLists.txt  README.md
Cyclon/: CMakeLists.txt  Cyclon.cpp  Cyclon.h  IsNumber.h  IsSkippable.h  Lexer.h  main.cy
Cyclon/Lexer/: IsAlphabetical.h  Lexer.h  Token.h  TokenType.h
Cyclon/Parser/: AbstractSyntaxTreeTypes.h  Parser.h
Cyclon/Parser/AbstractSyntaxTreeTypes/: BinaryExpressionNode.h  ExpressionNode.h  IdentifierNode.h  NodeType.h  NumericLiteralNode.h  ProgramNode.h  StatementNode.h
